--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "help": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6.23.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "zustand": "^4.5.2"
